[bdist_wheel]
universal = 1

[metadata]
author = guojian.li
author_email = guojianlee@qq.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Filesystems
description = Dropbox support for pyfilesystem2
license = MIT
long_description = file: README.rst HISTORY.rst
name = fs.dropboxfs
packages = find:
platforms = any
url = http://pypi.python.org/pypi/fs.dropboxfs/
version = 0.2.0

[options]
install_requires =
    fs>=2.0.7
    dropbox
tests_require = pytest

[options.entry_points]
fs.opener =
    dropbox = dropboxfs.opener:DropboxOpener

[options.packages.find]
exclude = tests
